syntax = "proto3";

package sample.ugrpc;

import "userver/field_options.proto";

message Creds {
  string login = 1;
  string password = 2 [(userver.field).secret = true];
  string secret_code = 3 [(userver.field).secret = true];
}

message Msg {
  string text = 1;
}

message SendRequest {
  Creds creds = 1;
  string dest = 2;
  Msg msg = 3;
}

message SendResponse {
  bool delivered = 1;
  Msg reply = 2;
  string token = 3 [(userver.field).secret = true];
}

service Messenger {
  rpc Send(SendRequest) returns (SendResponse) {}
}
